fix(core/instance): fix alignment of health indicators in multi-selected server group (#3752)

--- a/app/scripts/modules/core/src/serverGroup/details/multipleServerGroup.component.less
+++ b/app/scripts/modules/core/src/serverGroup/details/multipleServerGroup.component.less
@@ -8,6 +8,7 @@ multiple-server-group {
     font-weight: 600;
   }
   .server-group-details {
+    display: inline;
     padding-left: 26px;
   }
   border-top: 1px solid @mid_light_grey;
